[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
egui = "0.22.0"
eframe = "0.22.0"
tokio = { version = "1.34.0", features = ["full"] }
protocol = { path = "../protocol" }
reqwest = { version = "0.11.22", features = ["json"] }
