[package]
name = "rust-rbronline"
version = "1.0.0"
edition = "2021"
description = "Richard Burns Rally (RSF) realtime online racing platform"
authors = ["Lw_Ziye <geekerlw@gmail.com>"]
build = "build.rs"


[package.metadata.winres]
OriginalFilename = "rust-rbronline.exe"
LegalCopyright = "Copyright © 2023 Lw_Ziye"
FileDescription = "SimRallyCn RBR联机对战平台"
ProductName = "SimRallyCn RBR联机对战平台"
ProductVersion = "1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
egui = "0.22.0"
eframe = "0.22.0"
tokio = { version = "1.34.0", features = ["full"] }
protocol = { path = "../protocol" }
reqwest = { version = "0.11.22", features = ["json"] }
bincode = "1.3.3"
rust-ini = "0.20.0"
rfd = "0.12.1"
unicode-normalization = "0.1.22"
winapi = { version = "0.3.9", features = ["winuser"] }
libc = "0.2.151"
process-memory = "0.5.0"
log = "0.4.20"
env_logger = "0.10.1"

[target.'cfg(target_os="windows")'.build-dependencies]
winres = "0.1.12"
