[package]
name = "rbnhelper"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui-d3d9 = "0.3.7"
egui = "0.23.0"
windows = { version = "0.52.0", features = ["Win32_Graphics_Direct3D9", "Win32_Foundation", "Win32_Graphics_Gdi"] }
shroud = { version = "0.2.2", features = ["directx9"] }
libc = "0.2.151"
log = "0.4.20"
simplelog = "0.12.1"
hudhook = {git = "https://github.com/veeenu/hudhook.git"}
tracing-subscriber = "0.3"
imgui = "0.11.0"