[package]
name = "rbnhelper"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.151"
log = "0.4.20"
rust-ini = "0.20.0"
simplelog = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
protocol = { path = "../protocol" }
lazy_static = "1.4.0"
