[package]
name = "rbnhelper"
version = "2.1.0"
edition = "2021"
description = "Richard Burns Rally (RSF) realtime online racing plugin."
authors = ["Lw_Ziye <geekerlw@gmail.com>"]
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[package.metadata.winres]
OriginalFilename = "rbnhelper.dll"
LegalCopyright = "Copyright © 2023-2024 Lw_Ziye. All rights reserved."
FileDescription = "SimRallyCn RBR联机对战助手"
ProductName = "SimRallyCn RBR联机对战助手"
ProductVersion = "1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os="windows")'.build-dependencies]
winres = "0.1.12"

[dependencies]
libc = "0.2.151"
log = "0.4.20"
rust-ini = "0.20.0"
simplelog = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
rbnproto = { path = "../rbnproto" }
lazy_static = "1.4.0"
reqwest = { version = "0.11.22", features = ["json"] }
bincode = "1.3.3"
rodio = "0.17.3"