[package]
name = "rbnserver"
version = "2.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
rbnproto = { path = "../rbnproto" }
tokio = { version = "1.34.0", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4", "fast-rng","macro-diagnostics", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
bincode = "1.3.3"
clap = { version = "4.4.11", features = ["derive"] }
env_logger = "0.10.1"
log = "0.4.20"
chrono = "0.4.31"
cron = "0.12.1"
rand = "0.8.5"
unicode-normalization = "0.1.22"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio"] }
sqlx-sqlite = "0.7.4"
