[package]
name = "rust-rbrserver"
version = "1.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
protocol = { path = "../protocol" }
tokio = { version = "1.34.0", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4", "fast-rng","macro-diagnostics", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
bincode = "1.3.3"
clap = { version = "4.4.11", features = ["derive"] }
env_logger = "0.10.1"
log = "0.4.20"
chrono = "0.4.31"
