[package]
name = "rbnclient"
version = "2.0.0"
description = "Richard Burns Rally(RSF Version) Online Support, Generate by Tauri."
authors = ["Lw_Ziye(https://github.com/geekerlw)", "RacingJake(https://github.com/hjdshu)"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "http-all", "path-all", "fs-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
