[package]
name = "rbnclient"
version = "2.0.0"
description = "Richard Burns Rally(RSF Version) Online Support, Generate by Tauri."
authors = ["Lw_Ziye(https://github.com/geekerlw)", "RacingJake(https://github.com/hjdshu)"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "http-all", "path-all", "fs-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
serde_json = "1.0"
protocol = { path = "../../protocol"}
rust-ini = "0.20.0"
log = "0.4.21"
simplelog = "0.12.1"
libc = "0.2.153"
bincode = "1.3.3"
unicode-normalization = "0.1.22"
winapi = { version = "0.3.9", features = ["winuser"] }
process-memory = "0.5.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
